--- a/ExamTask1/css/style.css
+++ b/ExamTask1/css/style.css
@@ -1,8 +1,14 @@
+html *
+{
+   font-family: Arial !important;
+}
+
 table {
   table-layout: fixed; 
   border-spacing: 0px;
   *margin-left: -100px;/*ie7*/
 }
+
 td, th {
   text-align: left;
   vertical-align: top;
@@ -10,15 +16,20 @@ td, th {
   border-left: 1px solid #ccc;
   border-right: 1px solid #ccc;
   padding:10px;
-  width:140px;
+  width:150px;
 }
 
+.responsive {
+
+  padding: 5px;
+  max-width: 1000px;
+} 
 
 .fix {
   position: absolute;
   *position: relative; /*ie7*/
-  margin-left: -120px;
-  width:100px;
+  margin-left: -150px;
+  width:150px;
   border-style:hidden;
 
   border-top: 1px solid #ccc;
@@ -30,5 +41,5 @@ td, th {
   overflow-x:auto;
   overflow-y:visible;
 
-  margin-left:110px;
+  margin-left:150px;
 }
