Try to make tables mobile friendly

--- a/ExamTask1/css/style.css
+++ b/ExamTask1/css/style.css
@@ -3,9 +3,58 @@ html *
    font-family: Arial !important;
 }
 
-body {
-	background-color: beige;
+head {
+	
+	background-color: aquamarine;
 }
+
+
+header {
+	height: 100px;
+	width: 100%;
+	background-color: aquamarine;
+	text-align: left;
+}
+
+nav {
+    float: top;
+	font-size:0px;
+
+	
+
+}
+
+
+a:link {
+	width:100px;
+    color: orange;
+    background-color: transparent;
+    text-decoration: none;
+}
+
+a:hover {
+    color: red;
+    background-color: antiquewhite;
+    text-decoration: none;
+}
+
+
+
+h1 {
+	
+	margin-bottom: -0.67em;
+}
+
+
+body {
+	width: 1000px;
+	margin-left: auto;
+	margin-right: auto;
+	padding: 5px;
+	background-color: beige;
+	border: 1px solid #ccc;
+}
+
 
 table {
   table-layout: fixed; 
@@ -21,6 +70,33 @@ td, th {
   border-right: 1px solid #ccc;
   padding:10px;
   width:150px;
+}
+
+button {
+	margin:10px;
+}
+
+
+.menu {
+
+	padding-left:48px;
+	padding-right:48px;
+	border: 2px solid#6495ED; /* CornflowerBlue */
+	display:inline-flex;
+    width:250px;
+	height:100px;
+	font-size:24px;
+
+
+}
+
+.left {
+	display:block
+}
+
+.right {
+	display:inline-block; 
+	
 }
 
 .responsive {
@@ -50,4 +126,50 @@ td, th {
   overflow-y:visible;
 
   margin-left:150px;
+}
+
+@media 
+only screen and (max-width: 760px),
+(min-device-width: 768px) and (max-device-width: 1024px)  {
+
+	/* Force table to not be like tables anymore */
+	table, thead, tbody, th, td, tr { 
+		display: block; 
+	}
+	
+	/* Hide table headers (but not display: none;, for accessibility) */
+	thead tr { 
+		position: absolute;
+		top: -9999px;
+		left: -9999px;
+	}
+	
+	tr { border: 1px solid #ccc; }
+	
+	td { 
+		/* Behave  like a "row" */
+		border: none;
+		border-bottom: 1px solid #eee; 
+		position: relative;
+		padding-left: 50%; 
+	}
+	
+	td:before { 
+		/* Now like a table header */
+		position: absolute;
+		/* Top/left values mimic padding */
+		top: 6px;
+		left: 6px;
+		width: 45%; 
+		padding-right: 10px; 
+		white-space: nowrap;
+	}
+	
+	/*
+	Label the data
+	*/
+	td:nth-of-type(1):before { content: "Rhino Species"; }
+	td:nth-of-type(2):before { content: "Population"; }
+	td:nth-of-type(3):before { content: "Habitat"; }
+
 }
