--- a/ExamTask1/css/style.css
+++ b/ExamTask1/css/style.css
@@ -19,9 +19,6 @@ header {
 nav {
     float: top;
 	font-size:0px;
-
-	
-
 }
 
 
@@ -47,7 +44,8 @@ h1 {
 
 
 body {
-	width: 1000px;
+	max-width:1000px;
+	width: 100%;
 	margin-left: auto;
 	margin-right: auto;
 	padding: 5px;
@@ -57,6 +55,7 @@ body {
 
 
 table {
+
   table-layout: fixed; 
   border-spacing: 0px;
   *margin-left: -100px;/*ie7*/
@@ -126,50 +125,4 @@ button {
   overflow-y:visible;
 
   margin-left:150px;
-}
-
-@media 
-only screen and (max-width: 760px),
-(min-device-width: 768px) and (max-device-width: 1024px)  {
-
-	/* Force table to not be like tables anymore */
-	table, thead, tbody, th, td, tr { 
-		display: block; 
-	}
-	
-	/* Hide table headers (but not display: none;, for accessibility) */
-	thead tr { 
-		position: absolute;
-		top: -9999px;
-		left: -9999px;
-	}
-	
-	tr { border: 1px solid #ccc; }
-	
-	td { 
-		/* Behave  like a "row" */
-		border: none;
-		border-bottom: 1px solid #eee; 
-		position: relative;
-		padding-left: 50%; 
-	}
-	
-	td:before { 
-		/* Now like a table header */
-		position: absolute;
-		/* Top/left values mimic padding */
-		top: 6px;
-		left: 6px;
-		width: 45%; 
-		padding-right: 10px; 
-		white-space: nowrap;
-	}
-	
-	/*
-	Label the data
-	*/
-	td:nth-of-type(1):before { content: "Rhino Species"; }
-	td:nth-of-type(2):before { content: "Population"; }
-	td:nth-of-type(3):before { content: "Habitat"; }
-
 }
