--- a/ExamTask1/css/style_mobile.css
+++ b/ExamTask1/css/style_mobile.css
@@ -97,7 +97,7 @@ button {
 	padding-left:48px;
 	padding-right:48px;
 	border: 5px solid#6495ED; /* CornflowerBlue */
-	display:inline-flex;
+	/*display:inline-flex;*/
     width:100%;
 	height:10%;
 	min-height:30px;
