Added setting for small screens

--- a/ExamTask1/css/style.css
+++ b/ExamTask1/css/style.css
@@ -229,5 +229,14 @@ button {
 	#mobileMenu {
 		display:inline;
 	}
+}
 	
+@media screen and (min-width: 1000px) {
+	 /* The side navigation menu */
+	#desktopMenu {
+		display:inline;
+	}
+	#mobileMenu {
+		display:none;
+	}
 }
