--- a/ExamTask1/css/style.css
+++ b/ExamTask1/css/style.css
@@ -220,8 +220,9 @@ button {
 		.sidenav {padding-top: 15px;}
 		.sidenav a {font-size: 18px;}
 	}
-	
-@media screen and (max-width: 1000px) {
+
+@media handheld {
+/*screen and (max-width: 1000px) {*/
 	 
 	#desktopMenu {
 		display:none;
@@ -230,4 +231,10 @@ button {
 		display:inline;
 	}
 }
-
+	
+	#desktopMenu {
+		display:inline;
+	}
+	#mobileMenu {
+		display:none;
+	}
