--- a/ExamTask1/css/style.css
+++ b/ExamTask1/css/style.css
@@ -1,6 +1,7 @@
 html *
 {
    font-family: Arial !important;
+   zoom: 100%;
 }
 
 head {
@@ -20,6 +21,7 @@ header {
 	text-align: left;
 	margin-bottom:-10px;
 }
+
 
 nav {
 	background-color: beige;
@@ -105,6 +107,20 @@ button {
 
 }
 
+.sideBarMenu {
+
+	padding-left:48px;
+	padding-right:48px;
+	border: 2px solid#6495ED; /* CornflowerBlue */
+	display:inline-flex;
+    min-width:100%;
+	height:10%;
+	min-height:100px;
+	font-size:24px;
+
+
+}
+
 .left {
 	display:block
 }
@@ -180,10 +196,10 @@ button {
 	position: fixed; /* Stay in place */
 	z-index: 1; /* Stay on top */
 	top: 0;
-	left: 0;
+	right: 0;
 	background-color: #FFF; /* Black*/
 	overflow-x: hidden; /* Disable horizontal scroll */
-	padding-top: 60px; /* Place content 60px from the top */
+	/*padding-top: 60px;*/ /* Place content 60px from the top */
 	transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
 }
 
@@ -201,13 +217,13 @@ button {
 
 
 /* Position and style the close button (top right corner) */
-.sidenav .closebtn {
-	position: absolute;
-	top: 0;
-	right: 25px;
-	font-size: 36px;
-	margin-left: 50px;
-}
+/* .sidenav .closebtn { */
+	/* position: absolute; */
+	/* top: 0; */
+	/* right: 25px; */
+	/* font-size: 36px; */
+	/* margin-left: 50px; */
+/* } */
 
 /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
 #main {
@@ -222,7 +238,7 @@ button {
 }
 
 
-@media screen and (max-width: 1000px) {
+@media screen and (min-width: 1000px) {
 	 
 	#desktopMenu {
 		display:none;
@@ -231,7 +247,7 @@ button {
 		display:inline;
 	}
 }
-@media screen and (min-width: 1000px) {*/
+@media screen and (max-width: 1000px) {*/
 	#desktopMenu {
 		display:inline;
 	}
