Fix mobile width

--- a/ExamTask1/css/style.css
+++ b/ExamTask1/css/style.css
@@ -238,7 +238,7 @@ button {
 }
 
 
-@media screen and (min-width: 1000px) {
+@media screen and (max-width: 1000px) {
 	 
 	#desktopMenu {
 		display:none;
@@ -247,7 +247,7 @@ button {
 		display:inline;
 	}
 }
-@media screen and (max-width: 1000px) {*/
+@media screen and (min-width: 1000px) {*/
 	#desktopMenu {
 		display:inline;
 	}
