--- a/ExamTask1/css/style.css
+++ b/ExamTask1/css/style.css
@@ -287,6 +287,13 @@ button {
 
 		max-width: 100%
 	}
+	
+	.cover {
+		max-width: 100%;
+		display: block;
+		margin: 0 auto;
+		
+	}
 }
 @media screen and (min-width: 1000px) {*/
 	#desktopMenu {
@@ -300,5 +307,11 @@ button {
 		float:right;
 		width : 500px;
 		max-width: 100%;
+	}
+	
+	.cover {
+		max-width: 600px;
+		display: block;
+		margin: 0 auto;
 	}
 }
