--- a/ExamTask1/css/style.css
+++ b/ExamTask1/css/style.css
@@ -155,11 +155,19 @@ button {
 
 }
 
+.topMenu {
+	background-color: #FFFFFF;
+	
+}
+
 .left {
+	padding: 5px;
 	display:block
 }
 
 .right {
+	margin-top:15px;
+	padding-left: 5px;
 	display:inline-block; 
 	
 }
