--- a/ExamTask1separate/css/style.css
+++ b/ExamTask1separate/css/style.css
@@ -157,10 +157,13 @@ button {
 }
 
 .left {
+	padding: 5px;
 	display:block
 }
 
 .right {
+	margin-top:15px;
+	padding-left: 5px;
 	display:inline-block; 
 	
 }
