Removed a comment end

--- a/ExamTask1separate/css/style.css
+++ b/ExamTask1separate/css/style.css
@@ -304,7 +304,7 @@ button {
 	
 	
 }
-@media screen and (min-width: 1200px) {*/
+@media screen and (min-width: 1200px) {
 	#desktopMenu {
 		display:inline;
 	}
