Removed end comment block

--- a/ExamTask1/css/style.css
+++ b/ExamTask1/css/style.css
@@ -308,7 +308,7 @@ button {
 	
 	
 }
-@media screen and (min-width: 1200px) {*/
+@media screen and (min-width: 1200px) {
 	#desktopMenu {
 		display:inline;
 	}
