--- a/ExamTask1/css/style.css
+++ b/ExamTask1/css/style.css
@@ -19,6 +19,7 @@ header {
 	background-color: aquamarine;
 	text-align: left;
 	margin-bottom:-10px;
+	margin-top:-20px;
 }
 
 
@@ -55,10 +56,12 @@ h1 {
 
 h2 {
 	padding: 5px;
+	
 }
 
 h3 {
 	padding: 5px;
+	font-size:1.25em;
 }
 
 h4 {
