--- a/ExamTask1separate/css/style.css
+++ b/ExamTask1separate/css/style.css
@@ -19,6 +19,7 @@ header {
 	background-color: aquamarine;
 	text-align: left;
 	margin-bottom:-10px;
+	margin-top:-20px;
 }
 
 
@@ -59,6 +60,7 @@ h2 {
 
 h3 {
 	padding: 5px;
+	font-size:1.25em;
 }
 
 h4 {
