Try break word and link text align

--- a/ExamTask1separate/css/style.css
+++ b/ExamTask1separate/css/style.css
@@ -74,6 +74,11 @@ h6 {
 
 figure {
 	padding: 2px;
+	
+}
+
+figcaption {
+	word-wrap: break-word;
 }
 
 
@@ -304,6 +309,11 @@ button {
 		max-width: 100%
 	}
 	
+	.bLink {
+		text-align:left;
+		
+	}
+	
 	
 }
 @media screen and (min-width: 1200px) {
@@ -318,6 +328,11 @@ button {
 		float:right;
 		width : 500px;
 		max-width: 100%;
+	}
+	
+	.bLink {
+		text-align:right;
+		
 	}
 	
 }
