--- a/ExamTask1separate/css/style.css
+++ b/ExamTask1separate/css/style.css
@@ -78,8 +78,8 @@ figure {
 }
 
 figcaption {
-	/* word-wrap: break-all; */
-	word-wrap: break-word;
+	word-wrap: break-all;
+	/* word-wrap: break-word; */
 }
 
 
