--- a/ExamTask1separate/css/style.css
+++ b/ExamTask1separate/css/style.css
@@ -74,11 +74,12 @@ h6 {
 
 figure {
 	padding: 2px;
+	max-width : 100%;
 	
 }
 
 figcaption {
-	word-wrap: break-all;
+	/* word-wrap: break-all; */
 	/* word-wrap: break-word; */
 }
 
