--- a/ExamTask1separate/css/style.css
+++ b/ExamTask1separate/css/style.css
@@ -74,12 +74,12 @@ h6 {
 
 figure {
 	padding: 2px;
-	max-width : 100%;
+	max-width : 95%;
 	
 }
 
 figcaption {
-	/* word-wrap: break-all; */
+	word-wrap: break-all;
 	/* word-wrap: break-word; */
 }
 
